# emmaus_walk2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app_config.toml  docker-compose.debug.yml  docker-compose.yml  justfile  pyproject.toml  requirements-deploy.txt
.streamlit/: config.toml
data/: README.md  walk_details.toml
notebooks/: 00_core.ipynb  01_datapipe.ipynb  02_database.ipynb  03_photosgps.ipynb  04_s3fs_storage.ipynb  88_app.ipynb  90_BucketStorageS3.ipynb
src/emmaus_walking/: app.py  datapipe.py
src/emmaus_walking/resources/: walks.json
