[tool.poetry]
name = "emmaus-walking"
version = "0.1.0"
description = "Mapping of walking data @mjboothaus"
authors = ["Michael Booth <michael@databooth.com.au>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "emmaus_walking"}]

[tool.poetry.dependencies]
python = "^3.10"
activityio = "^0.0.3"
folium = "^0.14.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
Pillow = "^9.4.0"
streamlit = "^1.19.0"
streamlit-folium = "^0.11.1"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
